2006-02-21  Federico Mena Quintero  <federico@novell.com>

	* src/nautilus-share.c (property_page_commit): Oops, fix reversed
	return value when the user cancels the operation during the
	permissions check.
	(message_confirm_missing_permissions): Set the default response to
	the "accept" button.

2006-02-21  Federico Mena Quintero  <federico@novell.com>

	* src/nautilus-share.c (confirm_sharing_permissions): Renamed from
	check_sharing_permissions().  Now we let the user cancel the operation.
	(message_confirm_missing_permissions): Renamed from
	message_missing_permissions().  Now we present a confirmation
	dialog instead of an information one.
	(property_page_commit): Don't do anything if the user decides he
	doesn't want us to change his folder's permissions.

2006-02-20  Federico Mena Quintero  <federico@novell.com>

	* src/nautilus-share.c (property_page_commit): Check that the
	folder we are trying to share has enough "other" permissions.
	Fixes https://bugzilla.novell.com/show_bug.cgi?id=149615
	(check_sharing_permissions): New function.

	* src/shares.c (net_usershare_run): Return an error when our
	spawned command exits with a signal; we were returning success in
	this case with an empty GKeyFile, which the caller doesn't like.

2006-02-06  Federico Mena Quintero  <federico@ximian.com>

	* src/shares.c (net_usershare_run): Oops, fix a printf format.
	Fixes https://bugzilla.novell.com/show_bug.cgi?id=147065

2006-01-26  Federico Mena Quintero  <federico@ximian.com>

	* src/shares.c (net_usershare_run): Oops, don't propagate an error
	when there wasn't one.

	* interfaces/share-dialog.glade.in: Turn on word wrapping in the
	label_status widget; make it left-justified, and selectable.

	* src/nautilus-share.c (property_page_commit): Return a boolean
	success code.
	(button_apply_clicked_cb): Don't close the standalone window if we
	fail to commit the page.  This lets the user see the error message.

2006-01-19  Federico Mena Quintero  <federico@ximian.com>
